--- a/index.html
+++ b/index.html
@@ -26,11 +26,12 @@
             {
                 if(confirm("Delete "+fileName + "?"))
                 {
-                    $.ajax({
+                    location.replace('delete_song.php');
+                    /*$.ajax({
                         type :"POST",
                         url: 'delete_song.php',
                         data : fileName
-                    });
+                    });*/
                 }
             }
         </script>
