--- a/index.html
+++ b/index.html
@@ -31,9 +31,9 @@
                         url: 'delete_song.php',
                         data : fileName,
                         success: function(data) 
-                            { 
-                            alert("Sucess"); 
-                            }, 
+                        { 
+                            alert(data); 
+                        }, 
                         error: function(data) 
                         { 
                             alert("error"); 
