--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                         data : {'filename':fileName},
                         success: function(data) 
                         { 
-                            alert(data); 
+                            alert(fileName+"+_div"); 
                             document.getElementById(fileName+"+_div").remove();
                         }, 
                         error: function(data) 
