--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
                         { 
                             alert("#"+fileName+"_div"); 
                             $("#"+fileName+"_div").remove();
+                            alert("#"+fileName+"_div"); 
                         }, 
                         error: function(data) 
                         { 
