--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                         success: function(response) 
                         { 
                             alert($("#"+fileName+"_div")); 
-                            $("#"+fileName+"_div").remove();
+                            $("."+fileName+"_div").remove();
                         }, 
                         error: function(response) 
                         { 
