--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                         success: function(response) 
                         { 
                             alert($("#"+fileName+"_div")); 
-                            $(id).remove();
+                            $(id+"_div").remove();
                         }, 
                         error: function(response) 
                         { 
