--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                         data : {'filename':fileName},
                         success: function(response) 
                         { 
-                            alert("#"+id+"_div"); 
+                            alert(response); 
                             $("#"+id+"_div").remove();
                         }, 
                         error: function(response) 
