--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
         <script src="https://unpkg.com/babel-standalone@6/babel.min.js"></script>
 
         <!--My React script(s)-->
-        <!--Todo: Convert JSX from SRC and use back_panel.js-->
         <script src="back_panel.js"></script>
+        <script src="music_interface.js"></script>
     </body>
 </html>
