--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
 
         <!--Delete file function-->
         <script type="text/javascript">
+        alert("SD");
             function confirmDelete(fileName, id)
             {
                 if(confirm("Delete "+fileName + "?"))
