One Page Upload

--- a/index.html
+++ b/index.html
@@ -19,6 +19,9 @@
             <div id="back_panel"></div>
         </div>
 
+        <!--Iframe for file upload-->
+        <iframe name="upload_frame"></iframe>
+
         <!--Delete file function-->
         <script type="text/javascript">
             function confirmDelete(fileName, id)
