--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
         <!--React Library Scripts-->
         <script src="https://unpkg.com/react@17/umd/react.development.js" crossorigin></script>
         <script src="https://unpkg.com/react-dom@17/umd/react-dom.development.js" crossorigin></script>
+        <script src="Helmet.js"></script>
         
         <!--JSX library (Babel)-->
         <script src="https://unpkg.com/babel-standalone@6/babel.min.js"></script>
