Working on time bar

--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     </head>
     <body>
         <div>
+            <!--the audio player-->
+            <audio id="Music_Player" name="Music_Player"><source id="Music_Player" name="Music_Source"/></audio>
             <!--div for the actual music player-->
             <div id="player"></div>
             <hr/>
