--- a/index.html
+++ b/index.html
@@ -4,11 +4,12 @@
 
         <!--include jquery-->
         <script type="text/javascript" src="jquery-3.6.0.js"></script>
+        <link rel="stylesheet" href="styles.css">
     </head>
     <body>
         <div>
             <!--the audio player-->
-            <audio id="Music_Player"><source id="Music_Source"/></audio>
+            <audio id="Music_Player" currentTime="4"><source id="Music_Source"/></audio>
             <!--div for the actual music player-->
             <div id="player"></div>
             <hr/>
