--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 
         <!--include jquery-->
         <script type="text/javascript" src="jquery-3.6.0.js"></script>
-        <link rel="stylesheet" href="styles.css">
+        <link rel="stylesheet" href="style.css">
     </head>
     <body>
         <div>
