--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
             const MUSICSOURCE = $('#Music_Source');
 
             function MusicPlayerUpdateTime() {
-                console.log(this.currentTime + " / "+this.duration);
+                console.log(this.currentTime + " / "+this.duration)+ " time: "+ this.currentTime/this.duration;
                 $("#progress_bar").css("width", this.currentTime/this.duration);
             }
 
