--- a/index.html
+++ b/index.html
@@ -53,7 +53,8 @@
             const MUSICSOURCE = $('#Music_Source');
 
             function MusicPlayerUpdateTime() {
-                $("#progress_bar").css("width", (this.currentTime/this.duration) * $("#progress_bar_back").css("width"));
+                console.log($("#progress_bar_back").css("width"));
+                $("#progress_bar").css("width", (this.currentTime/this.duration) * parseInt($("#progress_bar_back").css("width")));
             }
 
             MUSICPLAYER.bind('timeupdate', MusicPlayerUpdateTime);
